# VerdictLoL

./: .gitignore  CLAUDE.md  README.md  config.py  config_template.py  facecheck_aggregate.py  facecheck_analysis.py  facecheck_champ_intel.py  facecheck_config.py  facecheck_data.py  facecheck_diagnosis.py  facecheck_display.py  facecheck_engine_base.py  facecheck_engine_cache.py  facecheck_engine_combat.py  facecheck_engine_death.py  facecheck_engine_draft.py  facecheck_engine_durability.py  facecheck_engine_economy.py  facecheck_engine_objective.py  facecheck_engine_vision.py  facecheck_game.py  facecheck_item.py  facecheck_player_model.py  facecheck_recent.py  facecheck_scout.py  facecheck_similarity.py  facecheck_special.py  facecheck_synthesis.py  facecheck_win_impact.py  index.html  league_build.py  league_players.py  league_scout.py  league_stats.py  league_vault.py  package-lock.json  package.json  tsconfig.json  verdict_aggregate.py  (+25 more)
CC-Session-Logs/: 13-05-2026-phase-e-observation-pipeline.md  13-05-2026-phases-f-g-h-complete.md  19-05-2026-engine-contracts.md  19-05-2026-synthesis-decomposition.md
LeagueVault/Champions/: Aatrox.md  Ahri.md  Akali.md  Akshan.md  Alistar.md  Ambessa.md  Amumu.md  Anivia.md  Annie.md  Aphelios.md  Ashe.md  (+161 more)
docs/: engine-contracts.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_config.py  test_engine_base.py  test_engines.py  test_game_model.py  test_synthesis.py
(+499 files in other folders)
